fix(scrollbar): hide scrollbar when modal is open

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,6 +47,10 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
+.blocked {
+    overflow-y: hidden;
+}
+
 .bg {
     background-size: cover; /* <------ */
     background-repeat: no-repeat;
